- Allow users to branch to more than one guide - Bug fix: jump to steps when user deletes current step

--- a/assets/css/aero.css
+++ b/assets/css/aero.css
@@ -933,6 +933,7 @@ a.aicon-role:hover span, .aero-menu-active a.aicon-role span { background-positi
     height: 160px;
     overflow-y: auto;
     overflow-x: hidden;
+	z-index: 9;
 }
 
 .aero-multi-select ul li label {
